# aimo-sdk

./: .env.local.example  .gitignore  .mocharc.json  LICENSE  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.build.json  tsconfig.json
.github/workflows/: publish.yml
python/: README.md  pyproject.toml
python/aimo_network/: __init__.py
python/aimo_network/client/: __init__.py  api.py  http.py  signer.py  siwx.py
python/aimo_network/evm/: __init__.py  constants.py  signer.py
python/aimo_network/provider/: __init__.py  openai.py
python/aimo_network/svm/: __init__.py  constants.py  signer.py
python/bitrouter/: __init__.py
python/bitrouter/client/: __init__.py  api.py  http.py  signer.py
python/bitrouter/evm/: __init__.py  signer.py
python/bitrouter/provider/: __init__.py  openai.py
python/bitrouter/svm/: __init__.py  signer.py
python/tests/: conftest.py  test_evm_client_api.py  test_evm_siwx.py  test_siwx.py  test_stream_response.py  test_svm_client_api.py  test_svm_siwx.py
test/: clientApi.test.ts  evmClientApi.test.ts  evmSiwx.test.ts  streamResponse.test.ts  svmClientApi.test.ts  svmSiwx.test.ts  testEnv.ts  utils.ts
ts/: .env.example  README.md  package.json  tsconfig.json
ts/test/: evmClientApi.test.ts  evmSiwx.test.ts  streamResponse.test.ts  svmClientApi.test.ts  svmSiwx.test.ts  testEnv.ts  utils.ts
